# VitaVault-Backup-utility

./: CMakeLists.txt  README.md  backup.c  backup.h  download_backup.bat  ftp.c  ftp.h  game_backup.c  game_backup.h  hash.c  hash.h  language.c  language.h  main.c  types.h  ui.c  ui.h  usb.c  usb.h  zip_utils.c  zip_utils.h
lang/: en.txt  it.txt  jpn.txt
module/: patch.skprx  usbdevice.skprx
sce_sys/livearea/contents/: template.xml
